# CS5330-ComputerVision

project1-video-special-effects/: .gitignore  CMakeLists.txt  imgDisplay.cpp  vidDisplay.cpp
